--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,14 @@
 img {
      width: 175px;
-     padding: 25px;
-     float:left;
+     padding: 20px;
+     float: left;
 }
 
 li {
-    display: inline;
-    color: darkgray;
-    text-align: right;
+    color: dimgray;
     padding-right: 20px;
-    list-style: none;
-    clear: both;
+    padding-left: 20px;
+    float: left;
 }
 
 a { 
@@ -19,12 +17,12 @@ a {
 
 #list1 {
     border-right: solid 1px darkgray;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 #list2 {
     border-right: solid 1px darkgray;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 body {
@@ -36,13 +34,12 @@ h1 {
     font-family: 'georgia';
     color: white;
     font-size: 30px;
-    width:28%;
+    width:21%;
     padding: 20px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 279.5px;
+    margin: 0px;
     bottom: 20px;
     background: cadetblue;
+    border-left: solid 279.5px white;
     
 }
 
@@ -52,47 +49,50 @@ h2 {
     font-size: 25px;
     padding-top:25px;
     padding-bottom:25px;
-    padding-left: 20px;
-    border-bottom: solid 2px gainsboro;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-bottom: solid 3px gainsboro;
 }
 
 #p1 {
     font-family: "Ariel";
     color: dimgrey;
-    font-size: 24px;
+    font-size: 27px;
     margin-top: 0px;
-    margin-left:25px;
-    margin-right:25px;
+    margin-left:20px;
+    margin-right:20px;
 }
 
 #p2 {
     font-family: "Ariel";
     color: dimgrey;
-    font-size: 24px;
-    margin-left:25px;
-    margin-right:25px;
+    font-size: 27px;
+    margin-left:20px;
+    margin-right:20px;
 
 }
 
 #p3 {
     font-family: "Ariel";
     color: dimgrey;
-    font-size: 24px;
-    margin-left:25px;
-    margin-right:25px;
+    font-size: 27px;
+    margin-left:20px;
+    margin-right:20px;
 }
 
 
 .container1 {
     background:white;
     border-bottom: solid 2px gainsboro; 
-    padding: 20px;    
+    padding: 0px;    
 }
 
 .container2 {
     background: white;
     width: 960px;
-    height: 500px;
+    height: 560px;
     margin-top: 30px;
     margin-left: 279.5px;
 }
