--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,15 @@ img {
      float: left;
 }
 
-li {
+div {
     color: dimgray;
     padding-right: 20px;
     padding-left: 20px;
-    float: left;
+}
+
+nav {
+    text-align: right;
+
 }
 
 a { 
@@ -18,6 +22,7 @@ a {
 #list1 {
     border-right: solid 1px darkgray;
     margin-right: 15px;
+    padding;
 }
 
 #list2 {
@@ -83,13 +88,13 @@ h2 {
 }
 
 
-.container1 {
+div {
     background:white;
     border-bottom: solid 2px gainsboro; 
     padding: 0px;    
 }
 
-.container2 {
+.container1 {
     background: white;
     width: 960px;
     height: 560px;
