--- a/assets/css/contactstyle.css
+++ b/assets/css/contactstyle.css
@@ -69,3 +69,12 @@ div {
    margin-top: 30px;
    margin-left: 279.5px;
 }
+
+footer {
+    font-family: 'georgia';
+    text-align: center;
+    color: white;
+    padding: 20px;
+    background: cadetblue;
+    border-top: 2px solid dimgray;
+}
